# slowrun

./: .gitignore  README.md  modal_tiny_train.py  pyproject.toml  pyrightconfig.json  requirements.txt  train.py  tune_train.py
research/hybrid_attn/: README.md  train.py
tiny/: train.py
unlimited/: gradient_select.py  train.py
