[project]
name = "slowrun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "numpy>=2.4.3",
    "optuna>=4.5.0",
    "optuna-integration>=4.5.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "pylsp-rope>=0.1.17",
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.5",
]
